[package]
name = "imgui"
version = "0.3.0-pre"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "High-level Rust bindings to dear imgui"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.markdown"

exclude = [
    "/resources"
]

#[features]
#zerocopy = ["zerocopy"]

[dependencies]
bitflags = "1.2.1"
glium = { version = "0.25", default-features = false, optional = true }
gfx = { version = "0.18", optional = true }
imgui-sys = { version = "0.3.0-pre", path = "imgui-sys" }
lazy_static = "1.4"
parking_lot = "0.10"
zerocopy = {version="0.2.8", optional = true}

[dev-dependencies]
memoffset = "0.5"

[workspace]
members = [
    "imgui-sys",
    "imgui-gfx-renderer",
    "imgui-glium-renderer",
    "imgui-winit-support"
]
exclude = [
    "imgui-examples",
    "imgui-gfx-examples",
    "imgui-sys-bindgen"
]
