[package]
name = "imgui-winit-support"
version = "0.3.0-pre"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "winit support code for the imgui crate"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = {git="https://github.com/Gekkio/imgui-rs.git", rev="9a59b17ea0f64b238b6b7f2317837a675a12e78d"}
winit-19 = { version = ">= 0.16, <= 0.19", package = "winit", optional = true }
winit-20 = { git="https://github.com/rust-windowing/winit.git", package = "winit", optional = true }

[features]
default = ["winit-19"]
